# combinators

./: combinators.cabal
