cabal-version: 3.0
name: combinators
version: 0.1
synopsis: Collection of combinators over standard typeclasses
homepage: https://github.com/nikita-volkov/combinators
bug-reports: https://github.com/nikita-volkov/combinators/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2024 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/combinators.git

common base
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DefaultSignatures
    FlexibleContexts
    FlexibleInstances
    MagicHash
    MultiParamTypeClasses
    NoImplicitPrelude
    ScopedTypeVariables
    TypeApplications
    UndecidableSuperClasses

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Combinators

  build-depends:
    base >=4.12 && <5,
    mtl >=2.2.2 && <3,
